# ChangeLog for sys-libs/ntdb
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/ntdb/ChangeLog,v 1.7 2015/03/03 10:06:34 dlan Exp $

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> ntdb-1.0-r1.ebuild:
  add arm64 support, tested on A53 board

  03 Jan 2015; Michał Górny <mgorny@gentoo.org> ntdb-1.0-r1.ebuild,
  ntdb-1.0.ebuild:
  Add PYTHON_REQ_USE and DEPEND as necessary for waf.

*ntdb-1.0-r1 (12 Jun 2014)

  12 Jun 2014; Michał Górny <mgorny@gentoo.org> +ntdb-1.0-r1.ebuild:
  Enable multilib support, required by samba-4.

  18 Apr 2014; Lars Wendler <polynomial-c@gentoo.org> ntdb-1.0.ebuild:
  Hard block older samba versions again.

  17 Apr 2014; Jeroen Roovers <jer@gentoo.org> ntdb-1.0.ebuild:
  Marked ~hppa too.

  17 Apr 2014; Lars Wendler <polynomial-c@gentoo.org> ntdb-1.0.ebuild:
  Only soft-block older samba-packages.

*ntdb-1.0 (17 Apr 2014)

  17 Apr 2014; Lars Wendler <polynomial-c@gentoo.org> +ntdb-1.0.ebuild,
  +metadata.xml:
  Initital commit.